2003-01-01  Brian Lindauer  <lindauer@projector.sysdetect.com>

	* BkFileutils.pl: Intial import.
